c4prj2_input/grade.txt
Grading at Fri Jul 31 08:13:44 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:1:1: error: unknown type name ‘deck_t’
 deck_t** read_input(FILE* f,size_t* n_hands,future_cards_t* fc)
 ^
input.c:1:21: error: unknown type name ‘FILE’
 deck_t** read_input(FILE* f,size_t* n_hands,future_cards_t* fc)
                     ^
input.c:1:29: error: unknown type name ‘size_t’
 deck_t** read_input(FILE* f,size_t* n_hands,future_cards_t* fc)
                             ^
input.c:1:45: error: unknown type name ‘future_cards_t’
 deck_t** read_input(FILE* f,size_t* n_hands,future_cards_t* fc)
                                             ^
Compilation of input.c failed

Overall Grade: F
